--- a/ComplexModelBinding/Views/Courses/Create.cshtml
+++ b/ComplexModelBinding/Views/Courses/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ComplexModelBinding.Models.Course
+﻿@model CourseCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -21,6 +21,9 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <select asp-for=AllAvailableInstructors></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
