--- a/ComplexModelBinding/Views/Courses/Create.cshtml
+++ b/ComplexModelBinding/Views/Courses/Create.cshtml
@@ -23,7 +23,12 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <select asp-for=AllAvailableInstructors></select>
+                <select asp-for="ChosenInstructor">
+                    @foreach(Instructor teacher in Model.AllAvailableInstructors)
+                    {
+                        <option value="@teacher.Id">@teacher.FullName</option>
+                    }
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
